エントリーアップロード処理をActiveStorageに合わせた設計にした

--- a/app/views/entries/_thumbnail_list.html.slim
+++ b/app/views/entries/_thumbnail_list.html.slim
@@ -1,14 +1,6 @@
-- if display_entries?(@entries_with_score, @uploading_entry_counts)
+- if @entries_with_score.any?
   .w-full.px-4
     .grid.grid-cols-2.sm:grid-cols-4.mx-auto.mt-4 data-controller="modal"
-      - if @uploading_entry_counts.present?
-        - @uploading_entry_counts.times do
-          .flex.justify-center.items-center
-            .relative
-              .animate-pulse.p-2.rounded.bg-stone-200.hover:shadow-md.size-44(
-                data-controller="upload-status"
-                data-upload-status-contest-id-value=@contest.id
-              )
       dialog(
         data-modal-target="dialog"
         class="px-4 py-8 rounded-lg backdrop:bg-black/80"
