--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -46,5 +46,6 @@
       class='w-full sm:w-auto bg-cyan-500 hover:bg-cyan-600 text-white \
              font-bold py-3 px-6 rounded sm:rounded-full text-lg transition'
       data-action='click->file-entry#upload'
+      data-file-entry-target='uploadButton'
     )
       = t('views.entries.new.enter')
