--- a/app/views/entries/_thumbnail_list.html.slim
+++ b/app/views/entries/_thumbnail_list.html.slim
@@ -15,7 +15,7 @@
               data: { action: 'click->modal#open',
                 modal_entries_show_url_value: entries_show_url },
               class: 'p-2 rounded hover:shadow-md'
-              = image_tag entry.image.variant(:thumb),
+              = image_tag url_for(entry.image.variant(:thumb)),
                 alt: t('views.entries.alt_text'),
                 class: 'w-full h-auto'
 
