コンテスト編集画面にセクションヘッダーを追加

--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -1,3 +1,6 @@
+.bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
+  h1.text-xl.sm:text-2xl.font-bold.text-black = 'コンテストを編集する'
+
 = render 'form'
 
 .my-4.flex.justify-center
