フォームからGoogleドライブに関する説明テキストを削除

--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -2,20 +2,12 @@
 .my-4.flex.justify-center
   = form_with model: @contest, locale: true do |f|
     .flex.flex-col.items-start
-      .flex.items-center
+      .flex.items-center.mb-4
         = f.label :name, t('activerecord.attributes.contest.name'),
           class: 'text-base font-medium text-stone-700 text-right \
-                          pr-2 flex-shrink-0 w-24'
+                  pr-2 flex-shrink-0 w-24'
         = f.text_field :name, class: 'block border-stone-300 rounded-md \
                                       focus:ring-cyan-500 focus:border-cyan-500'
-
-      p.text-xs.sm:text-sm.text-stone-600.text-left.ml-24 ※入力したコンテスト名は、
-      p.text-xs.sm:text-sm.text-stone-600.text-left.ml-24.pl-2.mb-4
-        span.block.sm:hidden
-          | Googleドライブに作成されるフォルダ名として
-          br
-          | 使用されます。
-        span.hidden.sm:block Googleドライブに作成されるフォルダ名として使用されます。
 
       .flex.items-center.w-full.mb-4
         = f.label :deadline, t('activerecord.attributes.contest.deadline'),
@@ -32,7 +24,6 @@
             data: { turbo_frame: '_top' },
             class: 'bg-cyan-500 hover:bg-cyan-600 text-white \
                               font-bold py-2 px-4 rounded-full'
-          p.text-xs.sm:text-sm.text-stone-600 ※Googleドライブにフォルダを作成します。
         - else
           = f.submit '更新する',
             data: { turbo_frame: '_top' },
