--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -33,7 +33,7 @@
              flex items-center justify-center cursor-pointer transition"
     )
       i.fa-regular.fa-image.text-stone-500.mr-2.text-2xl
-      | 画像を選ぶ
+      | 写真を選ぶ
       input#mobile-file-input.hidden(
         type='file'
         accept="image/*"
