--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,13 +10,11 @@ html.bg-stone-200
     = yield :head
 
     link rel="manifest" href="/manifest.json"
-    link rel="icon" href="/icon.png" type="image/png"
-    link rel="icon" href="/icon.svg" type="image/svg+xml"
-    link rel="apple-touch-icon" href="/icon.png"
+    link rel="icon" href="/logo_icon.png" type="image/png"
+    link rel="apple-touch-icon" href="/logo_icon.png"
     = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_importmap_tags
-    = favicon_link_tag('favicon.ico')
 
   body.max-w-screen-md.mx-auto.min-h-screen.flex.flex-col.bg-white
     header
