--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -2,12 +2,12 @@
   "name": "PixPick",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/logo_icon.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/icon.png",
+      "src": "/logo_icon.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
@@ -16,7 +16,6 @@
   "start_url": "/",
   "display": "standalone",
   "scope": "/",
-  "description": "PixPick.",
-  "theme_color": "red",
-  "background_color": "red"
+  "theme_color": "#06B6D4",
+  "background_color": "#06B6D4"
 }
