metaタグを設定

--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'コンテストを編集する'
+- set_meta_tags description: 'コンテストを編集するためのページです。コンテストの編集には参加者の招待を含みます。'
+
 .bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black = 'コンテストを編集する'
 
