--- a/app/views/contests/index.html.slim
+++ b/app/views/contests/index.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'コンテスト一覧'
+- set_meta_tags description: 'あなたの参加しているコンテストの一覧が確認できます。'
+
 .bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black = t('views.contests.index.title')
 
