--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -1,5 +1,8 @@
+- set_meta_tags title: '家族や友人を招待する'
+- set_meta_tags description: 'コンテストに家族や友人を招待するためのページです。'
+
 .container.mx-auto.max-w-xl.p-6
-  h1.text-2xl.font-bold.mb-4 新たな参加者の招待
+  h1.text-2xl.font-bold.mb-4 家族や友人を招待する
 
   p.text-stone-600
     | 以下のURLからログインすることで、このコンテストに参加することができます。
