--- a/app/views/contests/show.html.slim
+++ b/app/views/contests/show.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: @contest.name
+- set_meta_tags description: 'エントリーへ投票し、ランキングを確認するためのページです。'
+
 .flex.justify-between.items-center.bg-stone-100.px-4.py-3
   .overflow-hidden
     h1.text-2xl.font-bold.my-2.truncate = @contest.name
