--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'コンテストに写真をエントリーする'
+- set_meta_tags description: '参加しているコンテストに写真をエントリーすることができます。'
+
 .bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black
     = t('views.entries.new.entry_photos')
