--- a/app/views/participants/new.html.slim
+++ b/app/views/participants/new.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'コンテストに参加する'
+- set_meta_tags description: 'PixPickで開催されている写真コンテストに参加するためのページです。'
+
 .container.mx-auto.max-w-lg.p-6
   p.text-2xl.font-bold.text-stone-800.mb-6.text-center
     - if user_signed_in?
