--- a/app/views/contests/new.html.slim
+++ b/app/views/contests/new.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'コンテストを作成する'
+- set_meta_tags description: '新しいコンテストを作成するためのページです。'
+
 .bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black = t('views.contests.new.title')
 
