--- a/app/views/home/privacy.html.slim
+++ b/app/views/home/privacy.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: 'プライバシーポリシー'
+- set_meta_tags description: 'PixPickのプライバシーポリシーのページです。'
+
 .p-2
   .leading-relaxed.text-sm.my-4
     h2.text-xl.font-bold.text-center.my-2 プライバシーポリシー
