--- a/app/views/home/terms.html.slim
+++ b/app/views/home/terms.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: '利用規約'
+- set_meta_tags description: 'PixPickの利用規約のページです。'
+
 .p-2
   h2.text-xl.font-bold.text-center.my-2 利用規約
   .leading-relaxed.text-sm.my-4
