--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,7 +3,7 @@ html.bg-stone-200
   head
     title = content_for(:title) || 'Pix Pick'
     meta name="viewport" content="width=device-width,initial-scale=1"
-    meta name="apple-mobile-web-app-capable" content="yes"
+    meta name="mobile-web-app-capable" content="yes"
     = csrf_meta_tags
     = csp_meta_tag
 
@@ -15,6 +15,7 @@ html.bg-stone-200
     = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = javascript_importmap_tags
+    = display_meta_tags default_meta_tags
 
   body.max-w-screen-md.mx-auto.min-h-screen.flex.flex-col.bg-white
     header
