招待関連ページのレイアウト調整

--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -1,10 +1,11 @@
 - set_meta_tags title: '家族や友人を招待する'
 - set_meta_tags description: 'コンテストに家族や友人を招待するためのページです。'
 
-.container.mx-auto.max-w-xl.p-6
-  h1.text-2xl.font-bold.mb-4 家族や友人を招待する
+.bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
+  h1.text-xl.sm:text-2xl.font-bold.text-black 家族や友人を招待する
 
-  p.text-stone-600
+.mx-6.sm:mx-20
+  p.text-base.sm:text-xl.text-stone-800.my-6
     | 以下のURLからログインすることで、このコンテストに参加することができます。
     br
     | URLをコピーして家族や友人をコンテストに招待しましょう！
