--- a/app/views/layouts/header/_main.html.slim
+++ b/app/views/layouts/header/_main.html.slim
@@ -14,4 +14,4 @@
     .ml-auto.flex.justify-end.items-center
       - if current_user.contests.any? && !@is_editing_contest
         = render 'layouts/header/contest_selection'
-      = render 'layouts/header/menu'
+      .z-50 = render 'layouts/header/menu'
