細かなレイアウト調整

--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -6,7 +6,7 @@
 
 = render 'form'
 
-.my-4.flex.justify-center
+.my-4.flex.justify-center.mx-4
   .w-full.max-w-lg.flex
     .w-1/4.flex.flex-col.justify-start
       | 【参加者】
