--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -15,7 +15,5 @@
   ],
   "start_url": "/",
   "display": "standalone",
-  "scope": "/",
-  "theme_color": "#06B6D4",
-  "background_color": "#06B6D4"
+  "scope": "/"
 }
