一度にアップロードできるファイル数に関する説明テキストを追加

--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -29,6 +29,9 @@
     )
     .preview-container.mt-4 data-file-entry-target='preview'
 
+  .text-sm.font-bold.text-stone-500.text-center.sm:text-right.mt-2
+    | ※一度にアップロードできる写真の枚数は10枚までです。
+
   .sm:hidden.mt-6
     label(
       class="block w-full h-14 bg-white text-stone-500 font-bold \
