トップページのロゴの左右の余白を調整

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,9 +1,9 @@
-.py-8.text-center
+.pt-12.text-center
   h1
-    = image_tag 'logo.png', alt: 'PixPickのロゴ', class: 'mx-auto'
+    = image_tag 'logo.png', alt: 'PixPickのロゴ', class: 'mx-auto px-8 w-96'
   p.text-2xl.text-stone-800.font-bold.mt-8 みんなのベストショットを決めよう
 
-.max-w-xl.mx-auto.px-4
+.max-w-xl.mx-auto.mt-8.px-4
   p.text-stone-800.text-center
     | PixPickは、家族や友人と一緒に、
     br
