--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -1,7 +1,10 @@
 .pt-12.text-center
   h1
     = image_tag 'logo.png', alt: 'PixPickのロゴ', class: 'mx-auto px-8 w-96'
-  p.text-2xl.text-stone-800.font-bold.mt-8 みんなのベストショットを決めよう
+  p.text-2xl.text-cyan-600.font-bold.mt-8.px-10
+    | みんなの
+    br.sm:hidden
+    | ベストショットを決めよう
 
 .max-w-xl.mx-auto.mt-8.px-4
   p.text-stone-800.text-center
