--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -1,13 +1,11 @@
 = turbo_frame_tag 'form'
-.my-4.flex.justify-center
-  = form_with model: @contest, locale: true do |f|
-    .flex.flex-col.items-start
-      .flex.items-center.mb-4
-        = f.label :name, t('activerecord.attributes.contest.name'),
-          class: 'text-base font-medium text-stone-700 text-right \
-                  pr-2 flex-shrink-0 w-28'
-        = f.text_field :name, class: 'block border-stone-300 rounded-md \
-                                      focus:ring-cyan-500 focus:border-cyan-500'
+.m-4.flex.justify-center
+  = form_with model: @contest, locale: true, html: { class: 'w-full mx-4 flex flex-col justify-center items-start' } do |f|
+    .w-full
+      = f.label :name, t('activerecord.attributes.contest.name'),
+        class: 'text-base font-medium text-stone-700 text-left'
+      = f.text_field :name, class: 'border-stone-300 rounded-md \
+                                    focus:ring-cyan-500 focus:border-cyan-500 w-full'
 
       .flex.items-center.w-full.mb-4
         = f.label :deadline, t('activerecord.attributes.contest.deadline'),
