--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -1,29 +1,33 @@
 = turbo_frame_tag 'form'
 .m-4.flex.justify-center
-  = form_with model: @contest, locale: true, html: { class: 'w-full mx-4 flex flex-col justify-center items-start' } do |f|
+  = form_with model: @contest, locale: true,
+    html: { class: 'w-full mx-4 flex flex-col \
+                    justify-center items-start' } do |f|
+
     .w-full
       = f.label :name, t('activerecord.attributes.contest.name'),
         class: 'text-base font-medium text-stone-700 text-left'
-      = f.text_field :name, class: 'border-stone-300 rounded-md \
-                                    focus:ring-cyan-500 focus:border-cyan-500 w-full'
+      = f.text_field :name,
+        class: 'border-stone-300 rounded-md \
+                focus:ring-cyan-500 focus:border-cyan-500 w-full'
 
-      .flex.items-center.w-full.mb-4
-        = f.label :deadline, t('activerecord.attributes.contest.deadline'),
-          class: 'text-base font-medium text-stone-700 text-right \
-                          pr-2 flex-shrink-0 w-28'
+    .flex.flex-col.my-4
+      = f.label :deadline, t('activerecord.attributes.contest.deadline'),
+        class: 'text-base font-medium text-stone-700 text-left'
+      .flex.items-center
         = f.date_field :deadline,
           class: 'block w-30 border-stone-300 rounded-md \
-                                focus:ring-cyan-500 focus:border-cyan-500'
+                  focus:ring-cyan-500 focus:border-cyan-500'
         .ml-2 まで
 
-      .flex.justify-center.items-center.flex-col.w-full.mt-2
-        - if @contest.new_record?
-          = f.submit t('helpers.submit.contest.create'),
-            data: { turbo_frame: '_top' },
-            class: 'bg-cyan-500 hover:bg-cyan-600 text-white \
-                              font-bold py-2 px-4 rounded-full'
-        - else
-          = f.submit '更新する',
-            data: { turbo_frame: '_top' },
-            class: 'bg-cyan-500 hover:bg-cyan-600 \
-                             text-white font-bold py-2 px-4 rounded-full'
+    .flex.justify-center.items-center.w-full
+      - if @contest.new_record?
+        = f.submit t('helpers.submit.contest.create'),
+          data: { turbo_frame: '_top' },
+          class: 'bg-cyan-500 hover:bg-cyan-600 text-white \
+                  font-bold py-2 px-4 rounded-full'
+      - else
+        = f.submit '更新する',
+          data: { turbo_frame: '_top' },
+          class: 'bg-cyan-500 hover:bg-cyan-600 text-white \
+                  font-bold py-2 px-4 rounded-full'
