--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -7,7 +7,7 @@
     .w-full
       = f.label :name, t('activerecord.attributes.contest.name'),
         class: 'text-base font-medium text-stone-700 text-left'
-      = f.text_field :name,
+      = f.text_field :name, placeholder: '例：うちの子コンテスト',
         class: 'border-stone-300 rounded-md \
                 focus:ring-cyan-500 focus:border-cyan-500 w-full'
 
