--- a/app/views/contests/new.html.slim
+++ b/app/views/contests/new.html.slim
@@ -4,10 +4,11 @@
 .bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black = t('views.contests.new.title')
 
-  = link_to 'コンテスト一覧へ', user_contests_path(current_user),
-    class: 'bg-stone-300 text-stone-700 hover:bg-stone-400 hover:text-black \
-            p-2 text-center rounded text-sm sm:text-lg font-semibold \
-            flex-shrink-0'
+  - if @contests.any?
+    = link_to 'コンテスト一覧へ', user_contests_path(current_user),
+      class: 'bg-stone-300 text-stone-700 hover:bg-stone-400 hover:text-black \
+              p-2 text-center rounded text-sm sm:text-lg font-semibold \
+              flex-shrink-0'
 .mx-6.sm:mx-20
   - if @contests.any?
     p.text-base.sm:text-xl.text-stone-800.my-6
