エントリー画面のボタンのデザインを調整

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -115,3 +115,13 @@ button {
 body.loading {
     cursor: progress;
 }
+
+label i {
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+}
+
+label:hover i {
+    color: white !important;
+}
