--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -29,14 +29,13 @@
     )
     .preview-container.mt-4 data-file-entry-target='preview'
 
-  .text-sm.font-bold.text-stone-500.text-center.sm:text-right.mt-2
+  .text-sm.font-bold.text-stone-500.text-center.sm:text-right.my-4
     | ※一度にアップロードできる写真の枚数は10枚までです。
 
-  .sm:hidden.mt-6
+  .sm:hidden.flex.justify-center.items-center.mx-4
     label(
-      class="block w-full h-14 bg-white text-stone-500 font-bold \
-             text-lg text-center border border-stone-400 rounded-lg \
-             flex items-center justify-center cursor-pointer transition"
+      class='bg-white hover:bg-cyan-500 text-stone-500 hover:text-white text-lg border border-stone-400 \
+             font-bold text-center py-4 w-full max-w-96 rounded-full transition'
     )
       i.fa-regular.fa-image.text-stone-500.mr-2.text-2xl
       | 写真を選ぶ
@@ -48,10 +47,10 @@
         data-action='change->file-entry#addFiles'
       )
 
-  .flex.justify-center.items-center.mt-6
+  .flex.justify-center.items-center.m-4
     button(
-      class='w-full sm:w-auto bg-cyan-500 hover:bg-cyan-600 text-white \
-             font-bold py-3 px-6 rounded sm:rounded-full text-lg transition'
+      class='bg-cyan-500 hover:bg-cyan-600 text-white text-lg \
+             font-bold py-4 w-full max-w-96 rounded-full'
       data-action='click->file-entry#upload'
       data-file-entry-target='uploadButton'
     )
