--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -34,8 +34,9 @@
 
   .sm:hidden.flex.justify-center.items-center.mx-4
     label(
-      class='bg-white hover:bg-cyan-500 text-stone-500 hover:text-white text-lg border border-stone-400 \
-             font-bold text-center py-4 w-full max-w-96 rounded-full transition'
+      class='bg-white hover:bg-cyan-500 text-stone-500 hover:text-white\
+             text-lg border border-stone-400 font-bold text-center py-4 \
+             w-full max-w-96 rounded-full transition'
     )
       i.fa-regular.fa-image.text-stone-500.mr-2.text-2xl
       | 写真を選ぶ
@@ -52,6 +53,7 @@
       class='bg-cyan-500 hover:bg-cyan-600 text-white text-lg \
              font-bold py-4 w-full max-w-96 rounded-full'
       data-action='click->file-entry#upload'
-      data-file-entry-target='uploadButton'
+      data-file-entry-target='entryButton'
+      disabled
     )
       = t('views.entries.new.enter')
