--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -1,13 +1,17 @@
 - set_meta_tags title: 'コンテストに写真をエントリーする'
 - set_meta_tags description: '参加しているコンテストに写真をエントリーすることができます。'
 
-.bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
-  h1.text-base.sm:text-2xl.font-bold.text-black
+.bg-stone-100.px-4.py-3.flex.flex-col.justify-between.items-center.border-none
+  h1.text-xl.sm:text-2xl.font-bold.text-black.mb-2
     = t('views.entries.new.entry_photos')
 
-  = link_to t('views.entries.new.to_contest_page'), contest_path(@contest),
-    class: 'bg-stone-300 text-stone-700 hover:bg-stone-400 hover:text-black \
-            px-2 py-2 rounded text-sm sm:text-lg font-semibold'
+  = link_to contest_path(@contest),
+    class: 'bg-white hover:bg-cyan-500 text-stone-500 hover:text-white \
+            text-center py-2 rounded text-sm sm:text-lg font-semibold \
+            w-full max-w-56 sm:max-w-64 border border-stone-400 \
+            hover:border-cyan-500 transition'
+    = t('views.entries.new.to_contest_page')
+    i.fa-solid.fa-angle-right.ml-2
 
 .mt-6(
   data-controller='file-entry'
