一度にアップロード可能な枚数の説明文の余白を調整

--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -33,7 +33,7 @@
     )
     .preview-container.mt-4 data-file-entry-target='preview'
 
-  .text-sm.font-bold.text-stone-500.text-center.sm:text-right.my-4
+  .text-sm.font-bold.text-stone-500.text-center.sm:text-right.mx-2.my-4
     | ※一度にアップロードできる写真の枚数は10枚までです。
 
   .sm:hidden.flex.justify-center.items-center.mx-4
