コンテスト画面のタブのレイアウトを調整 モバイルで表示すると文字が隠れてしまうことがあったので、タブの枠を拡げた。 併せて余白や色等の細かな調整を行った。

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -16,3 +16,6 @@
     @apply text-base my-4 p-1 border-b-2;
 }
 
+.tab-link {
+    @apply w-1/2 h-full leading-10 px-2 py-1 text-base font-bold text-center;
+}
