コンテスト画面に使用方法を説明するテキストを追加

--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -3,6 +3,10 @@
     | このコンテストは投票を締め切りました。
     br
     | ランキングタブから投票結果をご確認ください。
+- else
+  .text-center.my-6.text-base.text-stone-500.mx-4
+    i.fa-regular.fa-hand-pointer.mr-2
+    | 画像を選択して投票してください
 
 = render 'entries/thumbnail_list'
 
