--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -10,10 +10,13 @@
 
 = render 'entries/thumbnail_list'
 
-= link_to new_contest_entry_path(@contest),
-  data: { turbo_frame: '_top' },
-  class: 'fixed bottom-14 left-1/2 transform -translate-x-1/2 \
-          w-12 h-12 rounded-full bg-white text-black shadow-lg \
-          z-50 flex items-center justify-center leading-none \
-          border border-stone-200' do
-  i.fas.fa-plus
+div class='fixed bottom-0 w-full max-w-screen-md h-fit py-2 bg-stone-100 \
+           flex justify-center items-center'
+  = link_to new_contest_entry_path(@contest),
+    data: { turbo_frame: '_top' },
+    class: 'mx-4 w-full max-w-96 py-4 rounded-full transition bg-white \
+            hover:bg-cyan-500 text-stone-500 hover:text-white z-50 text-center \
+            leading-none text-base sm:text-lg border border-stone-400 \
+            hover:border-cyan-500 font-bold' do
+    i.fas.fa-plus.mr-2
+    | 写真を追加する
