--- a/app/views/contests/_ranking.html.slim
+++ b/app/views/contests/_ranking.html.slim
@@ -1,12 +1,12 @@
-.mx-auto.mt-8.sm:w-3/5
+.mt-8
   - if @ranked_entries.any?
-    table.w-full.border-collapse
+    table.w-full.sm:w-3/5.border-collapse.mx-auto.border-b.border-stone-200.pb-4
       - @ranked_entries.each do |ranked_entry|
-        tr
-          td.p-2.text-lg.font-bold.text-right = "#{ranked_entry[:rank]}位"
-          td.p-2.flex.justify-center.items-center
-            = image_tag url_for(ranked_entry[:entry].image.variant(:thumb)),
-              class: 'w-48 max-h-48 object-contain'
-          td.p-2.text-lg.text-left = "#{ranked_entry[:total_score]}点"
+        tr.flex.justify-center.items-center.mx-4.py-4.border-t.border-stone-200
+          td.mr-10.whitespace-nowrap
+            .text-lg.font-bold.text-center = "#{ranked_entry[:rank]}位"
+            .text-lg.text-center = "#{ranked_entry[:total_score]}点"
+          td = image_tag url_for(ranked_entry[:entry].image.variant(:thumb)),
+               class: 'w-48 max-h-48 object-contain'
   - else
     p.text-center.text-stone-600 エントリーがありません。
