--- a/app/views/entries/_show.html.slim
+++ b/app/views/entries/_show.html.slim
@@ -11,6 +11,9 @@
             class: 'entry-img h-72 sm:h-auto',
             data: { action: 'load->image-status#finish' }
 
+    p.text-center.my-6.text-base.text-stone-500.mx-4
+      | 点数を選択してください
+
     .flex.justify-center.mt-6.space-x-8
       - [1, 2, 3].each do |score|
         = button_to score.to_s,
