主要なアクション用のボタンのうちDB操作を伴わないもののデザインを統一

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -12,6 +12,11 @@
 
 */
 
+.btn-primary-large {
+    @apply text-stone-800 bg-white hover:bg-stone-200 text-lg border border-stone-200
+    font-bold text-center w-full max-w-96 py-4 rounded-full transition;
+}
+
 .section-header {
     @apply text-base my-4 p-1 border-b-2;
 }
