--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -10,13 +10,10 @@
 
 = render 'entries/thumbnail_list'
 
-div class='fixed bottom-0 w-full max-w-screen-md h-fit py-2 bg-stone-100 \
+div class='fixed bottom-0 w-full max-w-screen-md h-fit py-2 bg-stone-50 \
            flex justify-center items-center'
   = link_to new_contest_entry_path(@contest),
     data: { turbo_frame: '_top' },
-    class: 'mx-4 w-full max-w-96 py-4 rounded-full transition bg-white \
-            hover:bg-cyan-500 text-stone-500 hover:text-white z-50 text-center \
-            leading-none text-base sm:text-lg border border-stone-400 \
-            hover:border-cyan-500 font-bold' do
+    class: 'btn-primary-large' do
     i.fas.fa-plus.mr-2
     | 写真を追加する
