--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -19,8 +19,7 @@
     .w-3/4.flex.justify-end.items-center
       = link_to '新しい参加者を招待する',
         invite_contest_path(@contest),
-        class: 'bg-stone-300 hover:bg-stone-400 py-3 px-3 \
-                        rounded-full inline-block shadow-lg'
+        class: 'btn-primary-large'
 
 .my-4.flex.justify-center
   = link_to 'コンテストを削除する',
