--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -39,9 +39,7 @@
 
   .sm:hidden.flex.justify-center.items-center.mx-4
     label(
-      class='bg-white hover:bg-cyan-500 text-stone-500 hover:text-white \
-             text-lg border border-stone-400 hover:border-cyan-500 \
-             font-bold text-center py-4 w-full max-w-96 rounded-full transition'
+      class='btn-primary-large'
     )
       i.fa-regular.fa-image.text-stone-500.mr-2.text-2xl
       | 写真を選ぶ
