--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -53,8 +53,7 @@
 
   .flex.justify-center.items-center.m-4
     button(
-      class='bg-cyan-500 hover:bg-cyan-600 text-white text-lg \
-             font-bold py-4 w-full max-w-96 rounded-full'
+      class='btn-submit'
       data-action='click->file-entry#upload'
       data-file-entry-target='entryButton'
       disabled
