--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -6,17 +6,17 @@
 
     .w-full
       = f.label :name, t('activerecord.attributes.contest.name'),
-        class: 'text-base font-medium text-stone-700 text-left'
+        class: 'text-base font-medium text-stone-800 text-left'
       = f.text_field :name, placeholder: '例：うちの子コンテスト',
-        class: 'border-stone-300 rounded-md \
+        class: 'text-stone-700 border-stone-300 rounded-md \
                 focus:ring-cyan-500 focus:border-cyan-500 w-full'
 
     .flex.flex-col.my-4
       = f.label :deadline, t('activerecord.attributes.contest.deadline'),
-        class: 'text-base font-medium text-stone-700 text-left'
+        class: 'text-base font-medium text-stone-800 text-left'
       .flex.items-center
         = f.date_field :deadline,
-          class: 'block w-30 border-stone-300 rounded-md \
+          class: 'block w-30 text-stone-700 border-stone-300 rounded-md \
                   focus:ring-cyan-500 focus:border-cyan-500'
         .ml-2 まで
 
@@ -24,10 +24,8 @@
       - if @contest.new_record?
         = f.submit t('helpers.submit.contest.create'),
           data: { turbo_frame: '_top' },
-          class: 'bg-cyan-500 hover:bg-cyan-600 text-white text-lg \
-                  font-bold py-4 w-full max-w-96 rounded-full'
+          class: 'btn-submit'
       - else
         = f.submit '更新する',
           data: { turbo_frame: '_top' },
-          class: 'bg-cyan-500 hover:bg-cyan-600 text-white text-lg \
-                  font-bold py-2 w-full max-w-96 rounded-full'
+          class: 'btn-submit'
