--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -13,7 +13,7 @@
 */
 
 .btn-primary-large {
-    @apply text-stone-800 bg-white hover:bg-stone-200 text-lg border border-stone-200
+    @apply text-stone-800 bg-white hover:bg-stone-200 text-lg border-2 border-stone-200
     font-bold text-center w-full max-w-96 py-4 rounded-full transition;
 }
 
@@ -39,7 +39,7 @@
 }
 
 .entry-nav-button {
-    @apply flex items-center px-6 py-2 text-stone-700 bg-white rounded border border-stone-200 hover:bg-stone-200;
+    @apply flex items-center px-6 py-2 text-stone-700 bg-white rounded border border-stone-300 hover:bg-stone-300;
 }
 
 .rank {
