コンテスト編集画面の左右のグリッドを揃えた

--- a/app/views/contests/_form.html.slim
+++ b/app/views/contests/_form.html.slim
@@ -1,7 +1,7 @@
 = turbo_frame_tag 'form'
-.m-4.flex.justify-center
+.mx-8.my-4.flex.justify-center
   = form_with model: @contest, locale: true,
-    html: { class: 'w-full mx-4 flex flex-col \
+    html: { class: 'w-full flex flex-col \
                     justify-center items-start' } do |f|
 
     .w-full
