--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -1,7 +1,7 @@
 - set_meta_tags title: 'コンテストを編集する'
 - set_meta_tags description: 'コンテストを編集するためのページです。コンテストの編集には参加者の招待を含みます。'
 
-.bg-stone-100.px-4.py-3.flex.justify-between.items-center.border-none
+.bg-stone-100.pl-8.py-3.flex.justify-between.items-center.border-none
   h1.text-xl.sm:text-2xl.font-bold.text-black = 'コンテストを編集する'
 
 = render 'form'
@@ -15,12 +15,12 @@
     - if user == current_user
       = render partial: 'contests/participant', locals: { user: }
 
-  .flex.justify-center.items-center.mt-8
+  .flex.justify-center.items-center.mt-8.mx-8
     = link_to '新しい参加者を招待する',
       invite_contest_path(@contest),
       class: 'btn-primary-large'
 
-.my-4.flex.justify-center
+.mx-8.my-4.flex.justify-center
   = link_to 'コンテストを削除する',
             contest_path(@contest),
             data: { turbo_method: :delete,
@@ -28,6 +28,6 @@
             class: 'text-red-500 hover:underline hover:underline-offset-4 \
                     py-2 px-4 rounded-full'
 
-.my-4.flex.justify-center
+.mx-8.my-4.flex.justify-center
   = link_to 'キャンセル', user_contests_path(current_user),
             class: 'hover:underline hover:underline-offset-4'
