--- a/app/views/contests/edit.html.slim
+++ b/app/views/contests/edit.html.slim
@@ -21,13 +21,12 @@
       class: 'btn-primary-large'
 
 .mx-8.my-4.flex.justify-center
-  = link_to 'コンテストを削除する',
-            contest_path(@contest),
-            data: { turbo_method: :delete,
-                    turbo_confirm: '選択したコンテストを削除します。よろしいですか？' },
-            class: 'text-red-500 hover:underline hover:underline-offset-4 \
-                    py-2 px-4 rounded-full'
-
-.mx-8.my-4.flex.justify-center
   = link_to 'キャンセル', user_contests_path(current_user),
             class: 'hover:underline hover:underline-offset-4'
+
+.mx-8.my-8.flex.justify-end
+  = link_to 'コンテストを削除する',
+    contest_path(@contest),
+    data: { turbo_method: :delete,
+      turbo_confirm: '選択したコンテストを削除します。よろしいですか？' },
+    class: 'text-red-500 hover:underline hover:underline-offset-4'
