--- a/app/views/contests/invite.html.slim
+++ b/app/views/contests/invite.html.slim
@@ -15,7 +15,7 @@
       type="text"
       value=@invite_url
       readonly=true
-      class="w-full p-2 text-lg border border-stone-300 rounded-lg shadow-sm"
+      class='w-full p-2 text-lg border border-stone-300 rounded-lg'
     )
 
       .mt-6.text-center
@@ -23,8 +23,7 @@
           data: { controller: 'clipboard',
                   action: 'clipboard#copy',
                   clipboard_url_value: @invite_url },
-          class: 'bg-cyan-500 text-white font-bold py-3 px-4 \
-                  rounded-full hover:bg-cyan-600 shadow-md'
+          class: 'btn-primary-large'
 
   p.mt-6.text-center
     = link_to 'キャンセル', edit_contest_path(@contest),
