エントリー画面のデザインを調整

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,16 +75,14 @@ button:disabled:hover {
     width: 100%;
     height: 100%;
     object-fit: contain;
-}
-
-.preview-item img:hover {
-    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    border-width: 1px;
+    border-color: rgb(214 211 209 / var(--tw-border-opacity, 1));
 }
 
 .preview-item .remove-button {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: -11.5px;
+    right: -11.5px;
     background-color: #ff4726;
     color: white;
     border: none;
@@ -98,7 +96,7 @@ button:disabled:hover {
 }
 
 .preview-item .remove-button:hover {
-    background-color: #a82e19;
+    background-color: #ff7657;
 }
 
 .loading-spinner {
