--- a/app/views/entries/new.html.slim
+++ b/app/views/entries/new.html.slim
@@ -6,10 +6,9 @@
     = t('views.entries.new.entry_photos')
 
   = link_to contest_path(@contest),
-    class: 'bg-white hover:bg-cyan-500 text-stone-500 hover:text-white \
-            text-center py-2 rounded text-sm sm:text-lg font-semibold \
-            w-full max-w-56 sm:max-w-64 border border-stone-400 \
-            hover:border-cyan-500 transition'
+    class: 'text-stone-700 bg-white rounded text-center py-2 rounded \
+            text-sm sm:text-lg font-semibold w-full max-w-56 sm:max-w-64 \
+            border border-stone-300 hover:bg-stone-300 transition'
     = t('views.entries.new.to_contest_page')
     i.fa-solid.fa-angle-right.ml-2
 
