コンテスト画面のレイアウトを調整

--- a/app/views/contests/_all_entries.html.slim
+++ b/app/views/contests/_all_entries.html.slim
@@ -1,19 +1,18 @@
+- if !@contest.deadline_passed? && @entries_with_score.any?
+  .text-center.my-6.text-base.text-stone-700.mx-4 画像を選択して投票してください
+
 - if @contest.deadline_passed?
   .text-center.my-6.text-lg.font-semibold.text-stone-700
     | このコンテストは投票を締め切りました。
     br
     | ランキングタブから投票結果をご確認ください。
-- else
-  .text-center.my-6.text-base.text-stone-500.mx-4
-    i.fa-regular.fa-hand-pointer.mr-2
-    | 画像を選択して投票してください
 
 = render 'entries/thumbnail_list'
 
-div class='fixed bottom-0 w-full max-w-screen-md h-fit py-2 bg-stone-50 \
+div class='fixed bottom-0 w-full max-w-screen-md h-fit py-2 bg-stone-100 \
            flex justify-center items-center'
   = link_to new_contest_entry_path(@contest),
     data: { turbo_frame: '_top' },
-    class: 'btn-primary-large' do
+    class: 'text-stone-700 bg-stone-300 btn-primary-large' do
     i.fas.fa-plus.mr-2
     | 写真を追加する
