--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -27,6 +27,11 @@
     text-white text-lg font-bold py-4 w-full max-w-96 rounded-full;
 }
 
+.btn-secondary {
+    @apply text-stone-800 bg-white rounded text-center px-4 sm:px-6 py-2 rounded
+    text-base sm:text-lg font-semibold border border-stone-300 hover:bg-stone-300 transition flex-shrink-0;
+}
+
 .text-sunset-red {
     color: #ff4726;
 }
@@ -35,7 +40,7 @@
     @apply text-base my-4 p-1 border-b-2;
 }
 
-.tab-link {
+.btn-tab {
     @apply w-1/2 h-full leading-10 px-2 py-1 text-base font-bold text-center;
 }
 
