--- a/app/views/shared/_login_button.html.slim
+++ b/app/views/shared/_login_button.html.slim
@@ -3,7 +3,7 @@
   method: :post,
   data: { turbo: false },
   class: 'bg-cyan-500 hover:bg-opacity-75 transition py-3 px-16 \
-          mb-2 rounded-full text-white font-bold shadow-lg;'
+          mb-2 rounded-full text-white font-bold;'
 p.text-xs
   = link_to '利用規約', terms_path, class: 'text-cyan-500 hover:underline'
   | ・
