--- a/app/views/shared/_toast.html.slim
+++ b/app/views/shared/_toast.html.slim
@@ -1,6 +1,6 @@
 - toasts ||= []
 - toasts.each do |toast|
-  .max-w-xs.bg-white.border.rounded-xl.shadow-lg(
+  .max-w-xs.bg-white.border.rounded-xl(
     class=toast_border_css(toast[:type])
     data-controller='toast'
     data-dismiss-after='3000'
