--- a/app/views/layouts/header/_contest_selection.html.slim
+++ b/app/views/layouts/header/_contest_selection.html.slim
@@ -21,7 +21,7 @@
   div(
     data-dropdown-target='menu'
     class='hidden absolute top-8 right-0 mt-2 w-40 sm:w-64 flex flex-col \
-           bg-white border border-stone-200 rounded-md shadow-lg z-30'
+           bg-white border-2 border-stone-200 rounded-md z-30'
   )
     - @recent_contests.each do |contest|
       = link_to contest.name,
